# unpdf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION-0.4.md  README.md  build.rs  unpdf.sln
.cargo/: audit.toml
.github/workflows/: bindings.yml  ci.yml  pages.yml  publish-npm.yml  release.yml
benches/: parse_benchmark.rs
bindings/: Unpdf.cs  unpdf.h  unpdf.py
bindings/csharp/Unpdf/: DocumentInfo.cs  ExtractedImage.cs  Introspection.cs  NativeMethods.cs  Pdf.cs  PdfOptions.cs  README.md  Unpdf.csproj  UnpdfDocument.cs  UnpdfException.cs
bindings/csharp/Unpdf.Tests/: IntrospectionTests.cs  PdfTests.cs  Unpdf.Tests.csproj
bindings/python/: README.md  pyproject.toml
bindings/python/src/unpdf/: __init__.py  _native.py  unpdf.py
bindings/python/tests/: test_unpdf.py
bindings/wasm/: README.md
cli/: Cargo.toml
cli/src/: main.rs  update.rs  writer.rs
cli/tests/: cli_streaming.rs
docs/: index.html
docs/superpowers/plans/: 2026-03-19-replace-lopdf.md  2026-05-09-page-markers.md
docs/superpowers/specs/: 2026-03-19-replace-lopdf-design.md  2026-05-09-page-markers-design.md
examples/: realworld_test.rs
src/: detect.rs  error.rs  ffi.rs  lib.rs
src/convert/: mod.rs  pdf.rs
src/model/: document.rs  form.rs  mod.rs  page.rs  paragraph.rs  quality.rs  resource.rs  table.rs
src/parser/: backend.rs  bidi.rs  cmap_table.rs  encoding.rs  font.rs  layout.rs  mod.rs  ocr_gate.rs  options.rs  pdf_parser.rs  predefined_cmap.rs  stream.rs  table_detector.rs  xycut.rs
src/parser/raw/: content.rs  crypt.rs  document.rs  mod.rs  stream.rs  tokenizer.rs  xref.rs
src/render/: cleanup.rs  json.rs  markdown.rs  mod.rs  options.rs  result.rs  streaming.rs  text.rs  visitor.rs
tests/: acroform_test.rs  bidi_test.rs  cjk_extraction_test.rs  converter_test.rs  determinism_test.rs  diagnostics_test.rs  ffi_introspection_test.rs  ocr_gate_test.rs  page_stats_test.rs  raw_parser_test.rs  streaming_equivalence.rs  streaming_test.rs  visitor_test.rs  xycut_test.rs
tests/common/: mod.rs
unpdf-wasm/: Cargo.toml
unpdf-wasm/src/: document.rs  lib.rs  options.rs
