[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "unpdf"
version = "0.2.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
description = "High-performance PDF content extraction to Markdown, text, and JSON"
repository = "https://github.com/iyulab/unpdf"
homepage = "https://github.com/iyulab/unpdf"
documentation = "https://docs.rs/unpdf"
readme = "README.md"
keywords = ["pdf", "markdown", "text-extraction", "document", "parser"]
categories = ["parser-implementations", "text-processing"]
rust-version = "1.75"

[lib]
name = "unpdf"
crate-type = ["lib", "cdylib"]

[features]
default = ["fast-parse"]
ffi = []
async = ["tokio"]
fast-parse = []  # Enable nom_parser for faster PDF parsing

[dependencies]
# PDF parsing
lopdf = "0.39"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# Text processing
regex = "1.11"
unicode-normalization = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Optional: Async I/O
tokio = { version = "1.42", features = ["rt", "fs"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
